# feature_agent

./: .gitignore  pyproject.toml  readme.md  requirements.txt
examples/: app.py
feature_selection_agent/agents/: feature_classification_agent.py  feature_recommender_agent.py  feature_selection_executor_agent.py  field_mapping_agent.py  method_suggester_agent.py  new_category_indentification_agent.py  new_feature_suggester.py
feature_selection_agent/config/: method_configs.json  model_config.py  prompt_config.json
feature_selection_agent/views/: streamlit_views.py
