[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfn-feature-selection-agent"
version = "0.1.0"
authors = [
  { name="StepFN AI" },
]
description = "An AI-powered feature selection agent for automated data analysis and feature selection"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "sfn_blueprint==0.5.1",
    "sfn-llm-client==0.1.0"
]

[project.urls]
Homepage = "https://github.com/stepfnAI/feature_selection_agent"

[tool.hatch.build.targets.wheel]
packages = ["feature_selection_agent"]